# hrusha

./: .dockerignore  .gitignore  .gitleaks.toml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml  tets.yml
.pi/extensions/: hrusha-query.ts
deploy/: backup.sh  deploy.sh  lib.sh  status.sh  upgrade.sh
docs/: DEPLOYMENT.md  DESIGN.md  IMPLEMENTATION_PLAN.md
docs/design-logs/: 2026-07-05-0842-repurpose-eth-portfolio-monitor.md  2026-07-06-1117-blockscout-defillama-providers.md  2026-07-06-1534-ledger-hardening-nft-doctor-rules-backup.md  2026-07-06-1620-phase5a-fastapi-dashboard.md  2026-07-07-1126-vote-scout-probe.md  2026-07-07-1536-strategy-yield-price-effect.md  2026-07-07-1556-scout-sustainability-safety-gates.md  2026-07-07-1642-phase6-docker-deployment.md  2026-07-08-1200-invest-scout-suggestions.md  2026-07-08-1715-invest-dashboard-and-morpho-fix.md  2026-07-08-1830-pool-quality-filters.md  2026-07-09-1100-complete-aerodrome-claimables.md  2026-07-09-1220-vote-discoverability.md  2026-07-24-1200-faster-reads-syncs-agent-queries.md  INDEX.md
docs/examples/: 40acres_loan_scan.py  40acres_repayment_cadence.py  aerodrome_probe.py  fetch_wallet_data.py  goplus_probe.py  morpho_probe.py  pool_filter_lab.py  vote_backtest_probe.py  vote_history_probe.py  vote_scout_probe.py
hrusha/: __init__.py  bitfinex.py  cli.py  coins.py  config.py  fake_processor.py  logs.py  main.py  prices.py  strategy.py  strategy_order.py  test.py  ticker.py  wallet.py
tests/: conftest.py  test_aerodrome_adapter.py  test_alchemy_provider.py  test_app.py  test_blockscout_provider.py  test_cli.py  test_config.py  test_doctor.py  test_fake_processor.py  test_forty_acres_adapter.py  test_heal.py  test_ingest.py  test_invest_scout.py  test_logs.py  test_morpho_adapter.py  test_prices.py  test_query.py  test_reports.py  test_rules_io.py  test_smoke.py  test_store.py  test_strategy.py  test_sync.py  test_tags.py  test_vote_scout.py
(+36 files in other folders)
