[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hrusha"
version = "0.1.0"
description = "Personal crypto income monitor on Base: balances, transfers, fees, per-source neto"
readme = "README.md"
requires-python = ">=3.12"
# Pinned exactly; upgrades are deliberate (see docs/IMPLEMENTATION_PLAN.md, Phase 8 adds Dependabot).
dependencies = [
    "PyYAML==6.0.3",
    "httpx==0.28.1",
    # contract reads for protocol adapters (Aerodrome Sugar etc.); the
    # alternative is hand-rolled ABI encoding of nested dynamic structs
    "web3==7.16.0",
    # Phase 5 dashboard: server-rendered pages, no SPA (docs/IMPLEMENTATION_PLAN.md)
    "fastapi==0.139.0",
    "uvicorn==0.50.2",
    "jinja2==3.1.6",
    "python-multipart==0.0.32",  # form posts (tag editing, refresh button)
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[project.scripts]
hrusha = "hrusha.cli:main"

[tool.setuptools.packages.find]
include = ["hrusha*"]

[tool.setuptools.package-data]
hrusha = ["service/templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear
    "UP",  # pyupgrade
    "S",   # bandit security checks
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # pytest tests assert by design
    "S105",  # tests use deliberately fake secrets to verify they are never echoed
    "S106",  # token= keyword args are crypto token symbols, not passwords
    "S608",  # test helpers build INSERTs from their own literal dicts
    "S107",  # token= defaults are crypto token symbols, not passwords
]
"hrusha/providers/aave.py" = [
    "S105",  # token == "USDC" is a crypto symbol comparison, not a password
    "S106",  # token= kwarg is a crypto symbol, not a password
]
